# OpenGL-Tests

./: CMakeLists.txt
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/components/: camera_component.hpp  component_types.hpp  physics_component.hpp  render_component.hpp  transform_component.hpp
src/controller/: app.cpp  app.hpp
src/entity/: ecs_manager.cpp  ecs_manager.hpp
src/meshes/: base_mesh.cpp  base_mesh.hpp  cube_mesh.cpp  cube_mesh.hpp  material.cpp  material.hpp  square_mesh.cpp  square_mesh.hpp  triangle_mesh.cpp  triangle_mesh.hpp
src/systems/: camera_system.cpp  camera_system.hpp  physics_system.cpp  physics_system.hpp  render_system.cpp  render_system.hpp
src/view/: shader.cpp
